--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -1,48 +1,48 @@
 <div class="container">
-    <div style="display: flex;">
+    <p class="title">Данные о событии</p>
+    <div class="box">
         <div>
-            <div style="width: 500px;">
-                <p class="text" style="font-size: 20px; color: #EEF5F8;">Данные о событии</p>
-                <div style="display: flex; justify-content: space-between;">
+            <div>  
+                <div class="flex">
                     <p class="text__title">Статус события: </p>
                     <p class="text__data">{{event?.status}}</p>
                 </div>
-                <div style="display: flex; justify-content: space-between;">
+                <div class="flex">
                     <p class="text__title">Тип события: </p>
                     <p class="text__data">{{event?.type}}</p>
                 </div>
-                <div style="display: flex; justify-content: space-between;">
+                <div class="flex">
                     <p class="text__title">Вид спорта: </p>
                     <p class="text__data">{{event?.sport}}</p>
                 </div>
-                <div style="display: flex; justify-content: space-between;">
+                <div class="flex">
                     <p class="text__title">Место проведения: </p>
-                    <p class="text__data" style="text-align: end;">{{event?.location.name}}, {{event?.location.address}}</p>
+                    <p class="text__data">{{event?.location.name}}, {{event?.location.address}}</p>
                 </div>
-                <div style="display: flex; justify-content: space-between;">
+                <div class="flex">
                     <p class="text__title">Время начала: </p>
                     <p class="text__data">{{event?.time_start | date: 'dd.MM.YYYY HH:mm'}}</p>
                 </div>
-                <div style="display: flex; justify-content: space-between;">
+                <div class="flex">
                     <p class="text__title">Время окончания: </p>
                     <p class="text__data">{{event?.time_end | date: 'dd.MM.YYYY HH:mm'}}</p>
                 </div>
-                <div style="display: flex; justify-content: space-between;">
+                <div class="flex">
                     <p class="text__title">Цена: </p>
                     <p class="text__data" style="color: #089F5F;">{{event?.price}}&#8381;</p>
                 </div>
-                <div style="display: flex; justify-content: space-between;">
+                <div class="flex">
                     <p class="text__title">Цена за человека: </p>
                     <p class="text__data" style="color: #089F5F;">{{event?.stats.price_per_player}}&#8381;</p>
                 </div>
-                <p class="text__data" style="text-align: center;">Комментарий к событию: </p>
+                <p class="text__data">Комментарий к событию: </p>
                 <p class="text__data">{{event?.comment}}</p>
             </div>
     
             <div>
-                <p style="color: #EEF5F8; font-size: 20px; margin: 20px 0 10px 0;">Комментарии</p>
+                <p class="subtitle">Комментарии</p>
                 <form [formGroup]="addCommentForm" (ngSubmit)="sendComment()">
-                    <mat-form-field appearance="fill" style="width: 350px;">
+                    <mat-form-field appearance="fill" style="width: 290px;">
                         <mat-label>Введите текст</mat-label>
                         <textarea matInput
                                     cdkTextareaAutosize
@@ -53,11 +53,12 @@
                                     style="color: #EEF5F8;"
                                     ></textarea>
                     </mat-form-field>
-                    <button style="background-color: #121218; border: none; cursor: pointer;" [disabled]="addCommentForm.invalid">
+                    <button class="icon__send" [disabled]="addCommentForm.invalid">
                         <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">send</mat-icon>
                     </button>
+                    <button class="btn__send" mat-raised-button>Отправить</button>
                 </form>
-                <p style="color: #EEF5F8; display: flex; align-items: center; cursor: pointer; justify-content: center; margin-bottom: 10px;" (click)="openComment()">
+                <p class="title__comment" (click)="openComment()">
                     <span *ngIf="!commentWindow">Открыть комментарии </span>
                     <span *ngIf="commentWindow">Закрыть комментарии </span>
                     <mat-icon *ngIf="!commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_more</mat-icon>
@@ -65,32 +66,32 @@
                 </p>
                 <div *ngIf="commentWindow">
                     <div *ngFor="let c of event?.comments">
-                        <div style="background-color: #788CA0; margin: 5px 0; border-radius: 5px 5px 5px 0px; display: inline-block; padding: 5px 10px;">
-                            <span style="font-size: 12px; color: #121218;">{{c.user.full_name}}</span>
-                            <p style="padding: 5px 0px; color: #EEF5F8;">{{c.comment}} <span style="text-align: end; font-size: 12px; color: #121218;">{{c.time | date: 'HH:mm'}}</span></p>
+                        <div class="box__comment">
+                            <span class="user__comment" style="user-select: none;">{{c.user.full_name}}</span>
+                            <p class="text__comment">{{c.comment}} <span style="user-select: none;" class="time__comment">{{c.time | date: 'HH:mm'}}</span></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div style="margin-left: 40px;">
-            <div style="margin: 20px 0 10px 0;">
-                <button style="width: 120px; background: #089F5F; margin-right: 10px;" *ngIf="answer == null" mat-raised-button (click)="sendTruePost()">Приду</button>
-                <button style="width:  120px; background: #9f0808;" *ngIf="answer == null" mat-raised-button (click)="sendFalsePost()">Не приду</button>
+        <div class="box__surveys">
+            <div class="box__btns">
+                <button class="btn" style="background: #089F5F; margin-right: 10px;" *ngIf="answer == null" mat-raised-button (click)="sendTruePost()">Приду</button>
+                <button class="btn" style="background: #9f0808;" *ngIf="answer == null" mat-raised-button (click)="sendFalsePost()">Не приду</button>
 
-                <button style="width: 120px; background: #089F5F;" *ngIf="answer == false" mat-raised-button (click)="sendTruePut()">Приду</button>
-                <button style="width:  120px; background: #9f0808;" *ngIf="answer == true" mat-raised-button (click)="sendFalsePut()">Не приду</button>
+                <button class="btn" style="background: #089F5F;" *ngIf="answer == false" mat-raised-button (click)="sendTruePut()">Приду</button>
+                <button class="btn" style="background: #9f0808;" *ngIf="answer == true" mat-raised-button (click)="sendFalsePut()">Не приду</button>
             </div>
             <div>
-                <p style="color: #EEF5F8; font-size: 20px;">Опрос к событию</p>
+                <p class="subtitle">Опрос к событию</p>
                 <div *ngFor="let ev of event?.surveys.unknown">
-                    <p style="color: #EEF5F8; display: flex; align-items: center;">
+                    <p class="surveys__title">
                         <mat-icon style="color: #9f9508;" aria-hidden="false" aria-label="Example logout icon">pending</mat-icon>
                         {{ev.user.full_name}}
                     </p>
                 </div>
                 <div *ngFor="let ev of event?.surveys.false">
-                    <p style="color: #EEF5F8; display: flex; align-items: center;">
+                    <p class="surveys__title">
                         <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
                         {{ev.user.full_name}}
                     </p>
@@ -98,9 +99,9 @@
             </div>
             <br>
             <div>
-                <p style="color: #EEF5F8; font-size: 20px;">Участники события</p>
+                <p class="subtitle">Участники события</p>
                 <div *ngFor="let ev of event?.surveys.true">
-                    <p style="color: #EEF5F8; display: flex; align-items: center;">
+                    <p class="surveys__title">
                         <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
                         {{ev.user.full_name}}
                     </p>
