--- a/src/app/main/components/events/events.component.html
+++ b/src/app/main/components/events/events.component.html
@@ -1,9 +1,10 @@
 <div class="container">
     <div class="head">
-        <div class="empty" *ngIf="aAuth"></div>
+        <div class="empty"></div>
         <p class="title">Список событий</p>
         <button mat-raised-button class="btn" [routerLink]="['../add-event']" *ngIf="aAuth">Добавить событие</button>
         <mat-icon class="add" aria-hidden="false" aria-label="Example add icon" [routerLink]="['../add-event']" *ngIf="aAuth">add</mat-icon>
+        <div class="empty" *ngIf="!aAuth"></div>
     </div>
     <table>
         <tr class="tr__head">
@@ -22,7 +23,7 @@
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.time_end | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.location.name}}</td>
-            <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.price}}&#8381;</td>
+            <td *ngIf="aAuth" [routerLink]="['../event', event.id]" style="color: #089F5F;">{{event.price}}&#8381;</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.participants_count}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.status}}</td>
 
@@ -31,23 +32,40 @@
             <td *ngIf="!aAuth" (click)="notAuth()">{{event.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td *ngIf="!aAuth" (click)="notAuth()">{{event.time_end | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td *ngIf="!aAuth" (click)="notAuth()">{{event.location.name}}</td>
-            <td *ngIf="!aAuth" (click)="notAuth()">{{event.price}}&#8381;</td>
+            <td *ngIf="!aAuth" (click)="notAuth()" style="color: #089F5F;">{{event.price}}&#8381;</td>
             <td *ngIf="!aAuth" (click)="notAuth()">{{event.participants_count}}</td>
             <td *ngIf="!aAuth" (click)="notAuth()">{{event.status}}</td>
         </tr>
     </table>
-    <div class="mobile">
+
+    <div class="mobile" *ngIf="aAuth">
         <div *ngFor="let event of events?.results" [routerLink]="['../event', event.id]" class="cell">
-            <div style="display: flex; justify-content: space-between;">
-                <p style="font-size: 16px;">{{event.sport}}</p>
-                <p style="font-size: 16px;">{{event.type}}</p>
+            <div class="flex">
+                <p class="text">{{event.sport}}</p>
+                <p class="text">{{event.type}}</p>
             </div>
-            <p style="text-align: center; font-size: 16px;">{{event.time_start | date: 'dd.MM.YYYY'}}</p>
-            <p style="text-align: center; font-size: 24px; font-weight: bold;">{{event.time_start | date: 'HH:mm'}} - {{event.time_end | date: 'HH:mm'}}</p>
-            <div style="display: flex; justify-content: space-between;">
-                <p style="font-size: 18px;">{{event.location.name}}</p>
-                <p style="font-size: 18px;">{{event.price}}&#8381;</p>
-                <p style="font-size: 18px;">{{event.participants_count}}чел.</p>
+            <p class="text" style="text-align: center;">{{event.time_start | date: 'dd.MM.YYYY'}}</p>
+            <p class="text" style="text-align: center; font-size: 24px; font-weight: bold;">{{event.time_start | date: 'HH:mm'}} - {{event.time_end | date: 'HH:mm'}}</p>
+            <div class="flex">
+                <p class="text" style="font-size: 18px;">{{event.location.name}}</p>
+                <p class="text" style="font-size: 18px; color: #089F5F;">{{event.price}}&#8381;</p>
+                <p class="text" style="font-size: 18px;">{{event.participants_count}}чел.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="mobile" *ngIf="!aAuth">
+        <div *ngFor="let event of events?.results" (click)="notAuth()" class="cell">
+            <div class="flex">
+                <p class="text">{{event.sport}}</p>
+                <p class="text">{{event.type}}</p>
+            </div>
+            <p class="text" style="text-align: center;">{{event.time_start | date: 'dd.MM.YYYY'}}</p>
+            <p class="text" style="text-align: center; font-size: 24px; font-weight: bold;">{{event.time_start | date: 'HH:mm'}} - {{event.time_end | date: 'HH:mm'}}</p>
+            <div class="flex">
+                <p class="text" style="font-size: 18px;">{{event.location.name}}</p>
+                <p class="text" style="font-size: 18px; color: #089F5F;">{{event.price}}&#8381;</p>
+                <p class="text" style="font-size: 18px;">{{event.participants_count}}чел.</p>
             </div>
         </div>
     </div>
