--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,15 +1,15 @@
 <div class="container">
     <p class="title">Авторизация</p>
     <form [formGroup]="authForm" novalidate (ngSubmit)="sendService()">
-        <div style="display: flex; flex-direction: column; align-items: center;">
+        <div class="box">
             <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
                 <mat-label>Введите номер телефона</mat-label>
-                <input matInput formControlName="phone_number" style="color: #EEF5F8">
+                <input matInput formControlName="phone_number">
             </mat-form-field>
 
             <mat-form-field appearance="fill" style="width: 250px;">
                 <mat-label>Введите пароль</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" style="color: #EEF5F8">
+                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
                 <button class="btn__icon" type="button" mat-icon-button matSuffix 
                     (click)="hide = !hide" [attr.aria-label]="'Hide password'" 
                     [attr.aria-pressed]="hide">
@@ -18,8 +18,7 @@
             </mat-form-field>
 
             <div>
-                <button mat-raised-button style="background: #788CA0; width: 250px;" 
-                    [disabled]="authForm.invalid || authForm.disabled">Войти</button>
+                <button mat-raised-button class="btn" [disabled]="authForm.invalid || authForm.disabled">Войти</button>
             </div>
             <p [routerLink]="['../register']" class="subtitle">Еще не зарегистрированы?</p>
         </div>
