--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -19,10 +19,22 @@ $lightdark: #1C1C24;
     padding-bottom: 20px;
     user-select: none;
 }
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input {
+    color: $light;
+}
 .btn__icon {
     border: none;
     background: none;
     cursor: pointer;
+}
+.btn {
+    background: $grey;
+    width: 250px;
 }
 .subtitle {
     color: $light;
