--- a/src/app/auth/components/register/register.component.scss
+++ b/src/app/auth/components/register/register.component.scss
@@ -18,16 +18,28 @@ $lightdark: #1C1C24;
     padding-bottom: 20px;
     user-select: none;
 }
-.subtitle {
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input {
     color: $light;
-    font-size: 14px;
-    cursor: pointer;
-    margin: 10px 0;
 }
 .btn__icon {
     border: none;
     background: none;
     cursor: pointer;
+}
+.btn {
+    background: $grey;
+    width: 250px;
+}
+.subtitle {
+    color: $light;
+    font-size: 14px;
+    cursor: pointer;
+    margin: 10px 0;
 }
 @media(max-width: 1024px) {
     .container {
