--- a/src/app/main/components/add-location/add-location.component.scss
+++ b/src/app/main/components/add-location/add-location.component.scss
@@ -17,3 +17,15 @@ $lightdark: #1C1C24;
     color: $light;
     user-select: none;
 }
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input {
+    color: $light;
+}
+.btn {
+    background: $grey;
+    width: 280px;
+}
