--- a/src/app/main/components/add-player/add-player.component.scss
+++ b/src/app/main/components/add-player/add-player.component.scss
@@ -7,7 +7,7 @@ $lightdark: #1C1C24;
     width: 300px;
     border: 1px solid $grey;
     border-radius: 5px;
-    padding: 20px 30px;
+    padding: 20px 0;
     margin: 100px auto 0 auto;
 }
 .title {
@@ -23,4 +23,17 @@ $lightdark: #1C1C24;
     margin-right: 10px;
     margin-bottom: 20px;
     text-align: center;
+    user-select: none;
+}
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input {
+    color: $light;
+}
+.btn {
+    background: $grey;
+    width: 280px;
 }
