--- a/src/app/main/components/change-password/change-password.component.html
+++ b/src/app/main/components/change-password/change-password.component.html
@@ -1,30 +1,28 @@
 <div class="container">
     <p class="title">Изменить пароль</p>
     <form [formGroup]="changeForm" novalidate (ngSubmit)="checkForm()">
-        <div style="display: flex; flex-direction: column; align-items: center;">
-            <mat-form-field appearance="fill">
+        <div class="box">
+            <mat-form-field appearance="fill" style="width: 280px;">
                 <mat-label>Новый пароль</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" style="color: #EEF5F8">
+                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
                 <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
             </mat-form-field>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" style="width: 280px;">
                 <mat-label>Повторите пароль</mat-label>
-                <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2" style="color: #EEF5F8">
+                <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2">
                 <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
             </mat-form-field>
 
             <div>
-                <button mat-raised-button style="background: #788CA0; width: 250px;" 
-                [routerLink]="['../user']" type="button">Отмена</button>
+                <button mat-raised-button class="btn" [routerLink]="['../user']" type="button">Отмена</button>
             </div>
             <div style="margin-top: 10px">
-                <button mat-raised-button style="background: #788CA0; width: 250px;" 
-                [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
+                <button mat-raised-button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
             </div>
         </div>
     </form>
