--- a/src/app/main/components/change-password/change-password.component.scss
+++ b/src/app/main/components/change-password/change-password.component.scss
@@ -18,6 +18,18 @@ $lightdark: #1C1C24;
     color: $light;
     user-select: none;
 }
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input {
+    color: $light;
+}
+.btn {
+    background: $grey;
+    width: 280px;
+}
 .btn__icon {
     border: none;
     background: none;
