--- a/src/app/main/components/history/history.component.scss
+++ b/src/app/main/components/history/history.component.scss
@@ -25,6 +25,10 @@ $lightdark: #1C1C24;
     color: $light;
     user-select: none;
 }
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
 .btn {
     background: $blue; 
     width: 150px; 
@@ -39,12 +43,7 @@ table {
     width: 100%;
     user-select: none;
 }
-.title {
-    font-size: 30px;
-    text-align: center;
-    color: $light;
-    user-select: none;
-}
+
 .tr__head {
     background-color: $blue;
     td {
@@ -66,6 +65,9 @@ td {
 .tr:hover {
     background-color: $grey;
 }
+.mobile {
+    display: none;
+}
 .cell {
     border-top: 1px solid $grey;
     border-bottom: 1px solid $grey;
@@ -73,26 +75,18 @@ td {
     border-radius: 5px;
     background: $lightdark;
     width: 280px;
-    height: 110px;
+    min-height: 110px;
     padding: 10px;
 }
-p {
+.text {
+    font-size: 16px;
     color: $light;
     padding: 3px 0;
 }
-.mobile {
-    display: none;
-}
-@media(max-width: 1250px) {
+@media(max-width: 1350px) {
     .container {
         width: 300px;
         padding: 20px 0;
-    }
-    table {
-        display: none;
-    }
-    .mobile {
-        display: block;
     }
     .btn { 
         width: 150px; 
@@ -101,6 +95,12 @@ p {
         align-items: center; 
         justify-content: center;
         margin-left: 0;
+    }
+    table {
+        display: none;
+    }
+    .mobile {
+        display: block;
     }
 }
 .red {
