--- a/src/app/main/components/location/location.component.html
+++ b/src/app/main/components/location/location.component.html
@@ -17,4 +17,14 @@
             </td>
         </tr>
     </table>
+    <div class="mobile">
+        <div class="cell">
+            <p class="text" style="display: flex; align-items: center;">{{location?.name}} 
+                <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon" *ngIf="location?.confirmed">done</mat-icon>
+                <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon" *ngIf="!location?.confirmed">close</mat-icon>
+            </p>
+            <p class="text">{{location?.address}}</p>
+            <p class="text">{{location?.description}}</p>
+        </div>
+    </div>
 </div>
