--- a/src/app/main/components/locations/locations.component.scss
+++ b/src/app/main/components/locations/locations.component.scss
@@ -18,15 +18,29 @@ $lightdark: #1C1C24;
 .empty {
     width: 150px;
 }
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
 .title {
     font-size: 30px;
     text-align: center;
     color: $light;
     user-select: none;
+}
+.btn {
+    background: $blue; 
+    width: 150px; 
+    height: 30px; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+}
+.add {
+    display: none;
+    color: $light;
+    font-size: 30px;
+    padding-bottom: 10px;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
 }
 .tr__head {
     background-color: $blue;
@@ -49,40 +63,42 @@ td {
 .tr:hover {
     background-color: $grey;
 }
-.btn {
-    background: $blue; 
-    width: 150px; 
-    height: 30px; 
-    display: flex; 
-    align-items: center; 
-    justify-content: center;
-}
-.add {
+.mobile {
     display: none;
+}
+.cell {
+    border-top: 1px solid $grey;
+    border-bottom: 1px solid $grey;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background: $lightdark;
+    width: 280px;
+    min-height: 110px;
+    padding: 10px;
+}
+.text {
+    font-size: 16px;
     color: $light;
-    font-size: 30px;
-    padding-bottom: 10px;
+    padding: 3px 0;
 }
 @media(max-width: 700px) {
     .container {
-        width: 300px;
+        width: 290px;
         padding: 20px 0;
-        margin: 50px auto 0 auto;
     }
     .empty {
         display: none;
-    }
-    .title {
-        font-size: 20px;
-    }
-    td {
-        padding: 5px 5px;
-        font-size: 15px;
     }
     .btn {
         display: none;
     }
     .add {
+        display: block;
+    }
+    table {
+        display: none;
+    }
+    .mobile {
         display: block;
     }
 }
