--- a/src/app/main/components/players/players.component.html
+++ b/src/app/main/components/players/players.component.html
@@ -1,9 +1,22 @@
 <div class="container">
-    <p class="subtitle">Полное название команды: {{team?.full_name}}</p>
-    <p class="subtitle">Сокращенное название команды: {{team?.short_name}}</p>
-    <p class="subtitle">Количество игроков: {{count}}</p>
-    <p class="subtitle" style="margin-bottom: 10px;">Описание команды: {{team?.description}}</p>
-    <p class="title">Состав команды</p>
+    <p class="subtitle">{{team?.full_name}}</p>
+    <div class="flex name">
+        <p class="text__title">Полное название команды: </p>
+        <p class="text__data">{{team?.full_name}}</p>
+    </div>
+    <div class="flex name">
+        <p class="text__title">Сокращенное название команды: </p>
+        <p class="text__data">{{team?.short_name}}</p>
+    </div>
+    <div class="flex">
+        <p class="text__title">Количество игроков: </p>
+        <p class="text__data" style="color: #089F5F;">{{count}}</p>
+    </div>
+    <div class="flex">
+        <p class="text__title">Описание команды: </p>
+        <p class="text__data">{{team?.description}}</p>
+    </div>
+    <p class="title">Состав команды:</p>
     <table>
         <tr class="tr__head">
             <td>Номер</td>
@@ -19,5 +32,13 @@
             </td>
         </tr>
     </table>
+    <div class="mobile">
+        <div *ngFor="let player of team?.players" [routerLink]="['./player', player.id]" class="cell">
+            <p class="text">{{player?.number}} {{player?.user.full_name}}
+                <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon" *ngIf="player?.confirmed">done</mat-icon>
+                <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon" *ngIf="!player?.confirmed">close</mat-icon>
+            </p>
+        </div>
+    </div>
     <button *ngIf="aAuth" class="btn" [routerLink]="['./add-player', id]">Заявка на вступление в команду</button>
 </div>
