--- a/src/app/main/components/players/players.component.scss
+++ b/src/app/main/components/players/players.component.scss
@@ -11,9 +11,28 @@ $lightdark: #1C1C24;
     margin: 100px auto 0 auto;
     background: $lightdark;
 }
-table {
-    border-collapse: collapse;
-    width: 100%;
+.subtitle {
+    display: none;
+    color: $light;
+    font-size: 20px;
+}
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
+.text__title {
+    font-size: 16px;
+    color: $grey;
+    padding: 5px 0;
+    user-select: none;
+}
+.text__data {
+    font-size: 16px;
+    color: $light;
+    padding: 5px 0;
+    font-weight: 500;
+    user-select: none;
+    text-align: end;
 }
 .title {
     font-size: 30px;
@@ -21,6 +40,10 @@ table {
     padding-bottom: 10px;
     color: $light;
     user-select: none;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
 }
 .tr__head {
     background-color: $blue;
@@ -40,6 +63,25 @@ td {
 .tr:hover {
     background-color: $grey;
 }
+.mobile {
+    display: none;
+}
+.cell {
+    border-top: 1px solid $grey;
+    border-bottom: 1px solid $grey;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background: $lightdark;
+    width: 270px;
+    padding: 10px;
+}
+.text {
+    font-size: 16px;
+    color: $light;
+    padding: 3px 0;
+    display: flex;
+    align-items: center;
+}
 .btn {
     width: 100%;
     height: 29px;
@@ -53,20 +95,22 @@ td {
 .btn:hover {
     background: $grey;
 }
-.subtitle {
-    color: $light;
-    font-size: 20px;
-}
 @media(max-width: 700px) {
     .container {
-        width: 300px;
-        padding: 20px 0;
-    }
-    td {
-        padding: 5px 5px;
-        font-size: 15px;
+        width: 290px;
+        padding: 20px 5px;
+        border: none;
     }
     .subtitle {
-        font-size: 15px;
+        display: block;
+    }
+    .name {
+        display: none;
+    }
+    table {
+        display: none;
+    }
+    .mobile {
+        display: block;
     }
 }
