--- a/src/app/main/components/teams/teams.component.html
+++ b/src/app/main/components/teams/teams.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="head">
         <div class="empty"></div>
-        <p class="title" style="margin-left: 10px;">Список команд</p>
+        <p class="title">Список команд</p>
         <button *ngIf="aAuth" mat-raised-button class="btn" [routerLink]="['../add-team']">Добавить команду</button>
         <mat-icon *ngIf="aAuth" class="add" aria-hidden="false" aria-label="Example add icon" [routerLink]="['../add-team']">add</mat-icon>
         <div *ngIf="!aAuth" class="empty"></div>
@@ -18,4 +18,10 @@
             <td [routerLink]="['../players', team.id]">{{team.players_count}}</td>
         </tr>
     </table>
+    <div class="mobile">
+        <div *ngFor="let team of teams?.results" [routerLink]="['../players', team.id]" class="cell">
+            <p class="text">{{team.full_name}}</p>
+            <p class="text">Кол-во игроков: {{team.players_count}}</p>
+        </div>
+    </div>
 </div>
