--- a/src/app/main/components/user-change/user-change.component.scss
+++ b/src/app/main/components/user-change/user-change.component.scss
@@ -18,3 +18,15 @@ $lightdark: #1C1C24;
     color: $light;
     user-select: none;
 }
+.flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input {
+    color: $light;
+}
+.btn {
+    background: $grey;
+    width: 280px;
+}
