--- a/src/app/main/components/user/user.component.scss
+++ b/src/app/main/components/user/user.component.scss
@@ -16,6 +16,20 @@ $lightdark: #1C1C24;
     padding-bottom: 10px;
     flex-wrap: wrap;
 }
+.title {
+    font-size: 30px;
+    color: $light;
+    user-select: none;
+}
+.btn {
+    background: $blue; 
+    width: 150px;
+}
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .avatar {
     width: 150px; 
     height: 150px; 
@@ -23,49 +37,8 @@ $lightdark: #1C1C24;
     margin-right: 20px; 
     border-radius: 5px;
 }
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-.title {
-    font-size: 30px;
-    color: $light;
-    user-select: none;
-}
-.logout {
-    display: none;
-    color: #788CA0; 
-    cursor: pointer; 
-    margin-left: 10px;
-}
-.tr__head {
-    background-color: $blue;
-    td {
-        color: $light;
-        cursor: default;
-    }
-}
-td {
-    border-bottom: 1px solid $grey;
-    padding: 10px 30px;
-    font-size: 18px;
-    text-align: center;
-    cursor: pointer;
-    color: $light;
-}
-.tr:hover {
-    background-color: $grey;
-}
-.btn {
-    background: $blue; 
-    width: 150px;
-}
-.subtitle {
-    font-size: 16px;
-    text-align: right;
-    color: $light;
-    padding-top: 20px;
-    user-select: none;
+.text {
+    font-size: 20px;
 }
 .text__title {
     font-size: 16px;
@@ -85,22 +58,23 @@ td {
     border-radius: 5px;
     padding: 20px;
 }
-.line {
-    border-bottom: 1px solid $grey;
-    margin: 10px 0;
-}
-p {
-    color: $light;
-    user-select: none;
-}
 .box {
     width: 100%;
-    height: 80px; 
+    min-height: 80px; 
     margin-bottom: 10px;
     cursor: pointer;
 }
 .box:hover {
     background-color: $grey;
+}
+.line {
+    border-bottom: 1px solid $grey;
+    margin: 10px 0;
+}
+.subtitle {
+    color: $light;
+    font-size: 24px;
+    padding-bottom: 10px;
 }
 @media(max-width: 700px) {
     .container {
@@ -112,14 +86,5 @@ p {
     }
     .avatar {
         display: none;
-    }
-    td {
-        padding: 5px 5px;
-        font-size: 15px;
-    }
-}
-@media(max-width: 1150px) {
-    .logout {
-        display: block;
     }
 }
